@@ -1,4 +1,5 @@
 2010-09-24 Graeme Gott <graeme@gottcode.org>
+	* Cache board rectangle and piece size.
 	* Prompt before ending a game.
 
 2010-09-23 Graeme Gott <graeme@gottcode.org>
